syntax = "proto3";
package product;

option java_package = "dev.techdozo.product.api";


message ProductApiRequest {
  string sku = 1;

}

message ProductApiResponse {
  string name = 1;
  string description = 2;
  double price = 3;
}

service ProductApiService {
  rpc getProduct(ProductApiRequest) returns (ProductApiResponse);
}